--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
 
             <div class="col s12 l6 offset-l1 right-align">
-                <h4>Audio Calculation</h4>
+                <h4>Audio Project</h4>
                 <p><i>Spring 2017</i></p>
                 <p>Calculates audio features for a set of music and speech files. The project was created in C# on Visual Studio.</p>
             </div>
