--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <div class="col s12 l6">
                 <h4>Sneaker Database</h4>
                 <p><i>Summer 2018</i></p>
-                <p>Displays a list of upcoming and past sneaker releases. The project was created in MySQL and in C# on Visual Studio. </p>
+                <p>Displays a list of upcoming and past sneaker releases. There is also a user interface to insert data into the database. </p>
+                <a href="https://github.com/sojuljul/Sneakers-Database" target="_blank" class="btn indigo darken-4">Link to Project</a>
             </div>
 
             <div class="col s12 l4 offset-l1">
@@ -126,9 +127,10 @@
             </div>
 
             <div class="col s12 l6 offset-l1 right-align">
-                <h4>Audio Project</h4>
+                <h4>Audio Calculation</h4>
                 <p><i>Spring 2017</i></p>
-                <p>Calculates audio features for a set of music and speech files. The project was created in C# on Visual Studio.</p>
+                <p>Calculates audio features for a set of music and speech files. The output lists the results for the audio features of each file. </p>
+                <a href="https://github.com/sojuljul/Programs/tree/master/Audio%20Project" target="_blank" class="btn indigo darken-4">Link to Project</a>
             </div>
         </div>
 
@@ -138,7 +140,8 @@
             <div class="col s12 l6">
                 <h4>Disassembler</h4>
                 <p><i>Spring 2017</i></p>
-                <p>Displays a list of opcodes and their respective memory addresses by reading from a test file. The project was created in Easy68k.</p>
+                <p>Displays a list of opcodes and their respective memory addresses by reading from a test file.</p>
+                <a href="https://github.com/sojuljul/Hardware" target="_blank" class="btn indigo darken-4">Link to Project</a>
             </div>
 
             <div class="col s12 l4 offset-l1">
@@ -156,7 +159,8 @@
             <div class="col s12 l6 offset-l1 right-align">
                 <h4>Movie Rental Store</h4>
                 <p><i>Winter 2017</i></p>
-                <p>Displays a list of movie stocks and customer transactions by reading from several text files. The project was created in C++ on Visual Studio.</p>
+                <p>Displays a list of movie stocks and customer transactions by reading from several text files.</p>
+                <a href="https://github.com/sojuljul/Programs/tree/master/Movie%20Project" target="_blank" class="btn indigo darken-4">Link to Project</a>
             </div>
         </div>
 
@@ -228,7 +232,7 @@
 
                 <tr>
                     <th>Applications</th>
-                    <td>Visual Studio, Eclipse, MySQL, MS Office</td>
+                    <td>Visual Studio, Eclipse Java Oxygen, MySQL, SQLite, MS Office</td>
                 </tr>
             </table>
         </div>
