Added to project section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,39 @@
 
         <br>
 
+        <!-- NUMBER TRANSLATOR PROJECT -->
+        <div class="row">
+            <div class="col s12 l6">
+                <h4>Number Translator</h4>
+                <p><em>Feb 2019 -- Mar 2019</em></p>
+
+                <ul class="browser-default">
+                    <li>Created a program that translates a number to Korean.</li>
+                    <li>Utilized the Speech library for text-to-speech functionality.</li>
+                    <li>Utilized the Dictionary library to store Korean words for pronounciation.</li>
+                    <li>Developed an interface in C# to enter a number and listen to the pronounciation.</li>
+                </ul>
+
+                <a href="https://github.com/sojuljul/Number-Translation" target="_blank" class="btn indigo darken-4">Github Link</a>
+            </div>
+
+            <div class="col s12 l5 offset-l1">
+                <div class="slider">
+                    <ul class="slides">
+                        <li>
+                            <img src="img-projects/speech-img/speech1.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/speech-img/speech2.JPG" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <br>
+
         <!-- LOONA PROJECT -->
         <div class="row">
             <div class="col s12 l5">
