--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@
         <!-- NUMBER TRANSLATOR PROJECT -->
         <div class="row">
             <div class="col s12 l6">
-                <h4>Number Translator</h4>
+                <h4>Korean Translator</h4>
                 <p><em>Feb 2019 -- Mar 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created a program that translates a number to Korean.</li>
                     <li>Utilized the Speech library for text-to-speech functionality.</li>
-                    <li>Utilized the Dictionary library to store Korean words for pronounciation.</li>
-                    <li>Developed an interface in C# to enter a number and listen to the pronounciation.</li>
+                    <li>Utilized the Dictionary library to store Korean words for pronunciation.</li>
+                    <li>Developed an interface in C# for user input and sounds.</li>
+                    <li>Added another windows form to display the Korean alphabet in a table.</li>
+                    <li>Used the Regex library to check for valid input.</li>
                 </ul>
 
                 <a href="https://github.com/sojuljul/Number-Translation" target="_blank" class="btn indigo darken-4">Github Link</a>
