--- a/index.html
+++ b/index.html
@@ -120,21 +120,22 @@
         <!-- EPISODE TRACKER PROJECT -->
         <div class="row">
             <div class="col s12 l6">
-                <img src="img-projects/episodeTracker.JPG" alt="" class="responsive-img materialboxed">
+                <img src="img-projects/episodeProject.JPG" alt="" class="responsive-img materialboxed">
             </div>
 
             <div class="col s12 l5 offset-l1">
-                <h4>Episode Tracker</h4>
+                <h4>Episode Recorder</h4>
                 <p><em>May 2019 -- May 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created a website that manages the episode count for TV shows.</li>
                     <li>Utilized Bootstrap framework for front-end designs (ie. buttons).</li>
+                    <li>Utilized FontAwesome to add elegant icons for buttons.</li>
                     <li>Integrated the Firebase platform to store the episode counts to a database.</li>
                     <li>Added Event Listeners for button clicks (ie. submit, delete).</li>
                 </ul>
 
-                <a href="https://github.com/sojuljul/Websites/tree/master/Episode%20Tracker%20Firebase" target="_blank"
+                <a href="https://github.com/sojuljul/Websites/tree/master/Episode%20Recorder%20Firebase" target="_blank"
                     class="btn indigo darken-4">Github Link</a>
             </div>
 
