Added new projects

--- a/index.html
+++ b/index.html
@@ -117,6 +117,79 @@
 
         <br>
 
+        <!-- EP RECORDER ANDROID -->
+
+        <div class="row">
+            <div class="col s12 l6">
+
+                <div class="slider" id="android">
+                    <ul class="slides">
+                        <li>
+                            <img src="img-projects/android-img/eprecorder.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/android-img/eprecorder_popup.JPG" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col s12 l5 offset-l1">
+                <h4>Episode Recorder (Android)</h4>
+                <p><em>Jun 2019 - Present</em></p>
+
+                <ul class="browser-default">
+                    <li>Created an app to store tv shows and their episode counts.</li>
+                    <li>Integrated the Firebase platform to store data into a database.</li>
+                    <li>Added Toast messages to pop-up errors or successful actions.</li>
+                    <li>Added a long on-click function to edit an item.</li>
+                </ul>
+
+                <a href="https://github.com/sojuljul/AndroidApps/tree/master/EpisodeRecorder" target="_blank"
+                    class="btn indigo darken-4">Github Link</a>
+            </div>
+        </div>
+
+
+        <br>
+        <hr>
+
+        <!-- SALE CALCULATOR ANDROID -->
+        <div class="row">
+
+            <div class="col s12 l6">
+                <h4>Sale Calculator (Android)</h4>
+                <p><em>Jun 2019 -- Jun 2019</em></p>
+
+                <ul class="browser-default">
+                    <li>Created an app to calculate prices based on sale percentages.</li>
+                    <li>Added an activity screen to calculate the saving percentage based on sale price.</li>
+                    <li>Added pop-up dialogs to handle errors based on user input.</li>
+                    <li>Utilized DecimalFormat to display result to 2 decimal places.</li>
+                </ul>
+
+                <a href="https://github.com/sojuljul/AndroidApps/tree/master/SaleCalculator" target="_blank"
+                    class="btn indigo darken-4">Github Link</a>
+            </div>
+
+            <div class="col s12 l5 offset-l1">
+                <div class="slider" id="android">
+                    <ul class="slides">
+                        <li>
+                            <img src="img-projects/android-img/salecalc.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/android-img/salecalc_savings.JPG" alt="">
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <hr>
+        <br>
+
         <!-- EPISODE TRACKER PROJECT -->
         <div class="row">
             <div class="col s12 l6">
@@ -389,7 +462,7 @@
             <table>
                 <tr>
                     <th>Languages</th>
-                    <td>Java, C++, SQL, C#, (beginner): HTML, CSS, JavaScript, Python </td>
+                    <td>(proficient): C++, SQL, (familiar): Java, C#, HTML, CSS, JavaScript, Python </td>
                 </tr>
 
                 <tr>
@@ -399,7 +472,8 @@
 
                 <tr>
                     <th>Technologies</th>
-                    <td>Visual Studio, VS Code, Eclipse Java Oxygen, MySQL, SQLite, SQLite, PyCharm, Firebase</td>
+                    <td>Visual Studio, VS Code, Eclipse Java Oxygen, MySQL, SQLite, SQLite, PyCharm, Firebase, Android
+                        Studio</td>
                 </tr>
             </table>
         </div>
