--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profile - Juliano Nguyen Jr.</title>
+    <title>Portfolio - Juliano Nguyen Jr.</title>
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
@@ -90,7 +90,7 @@
                                     Engineering. During college, I learned coding skills, specifically Java and C++, and
                                     teamwork skills. My favorite course that I took at college was Database Systems
                                     because it was a different language from my other courses, and I had fun creating
-                                    different SQL statements and seeing their output.
+                                    SQL statements and SQL queries.
                                 </p>
                             </div>
 
@@ -98,7 +98,7 @@
                                 <p class="flow-text indigo-text text-darken-4">MISCELLANEOUS INFO</p>
 
                                 <ul class="collection">
-                                    <li class="collection-item">I want to travel to Japan and/or Korea</li>
+                                    <li class="collection-item">I want to travel to Japan</li>
                                     <li class="collection-item">I like to do video editing</li>
                                     <li class="collection-item">My favorite kpop group is TWICE and LOONA</li>
                                 </ul>
@@ -125,13 +125,22 @@
                 <div class="slider" id="android">
                     <ul class="slides">
                         <li>
-                            <img src="img-projects/android-img/eprecorder.JPG" alt="">
+                            <img src="img-projects/android-img/episode_recorder/ep_main.JPG" alt="">
                         </li>
                         <li>
-                            <img src="img-projects/android-img/eprecorder_add.JPG" alt="">
+                            <img src="img-projects/android-img/episode_recorder/ep_add.JPG" alt="">
                         </li>
                         <li>
-                            <img src="img-projects/android-img/eprecorder_update.JPG" alt="">
+                            <img src="img-projects/android-img/episode_recorder/ep_edit.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/android-img/episode_recorder/ep_help.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/android-img/episode_recorder/ep_settings.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/android-img/episode_recorder/ep_mainnight.JPG" alt="">
                         </li>
                     </ul>
                 </div>
@@ -151,16 +160,15 @@
             </div>
         </div>
 
-
-        <br>
         <hr>
+        <br>
 
         <!-- SALE CALCULATOR ANDROID -->
         <div class="row">
 
             <div class="col s12 l5">
                 <h4>Sale Calculator (Android)</h4>
-                <p><em>Jun 2019 -- Jun 2019</em></p>
+                <p><em>Jun 2019 - Jun 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created an app to calculate prices based on sale percentages.</li>
@@ -177,10 +185,10 @@
                 <div class="slider" id="android">
                     <ul class="slides">
                         <li>
-                            <img src="img-projects/android-img/salecalc.JPG" alt="">
+                            <img src="img-projects/android-img/sale_calculator/salecalc.JPG" alt="">
                         </li>
                         <li>
-                            <img src="img-projects/android-img/salecalc_savings.JPG" alt="">
+                            <img src="img-projects/android-img/sale_calculator/salecalc_savings.JPG" alt="">
                         </li>
                     </ul>
                 </div>
@@ -199,7 +207,7 @@
 
             <div class="col s12 l5 offset-l1">
                 <h4>Episode Recorder</h4>
-                <p><em>May 2019 -- May 2019</em></p>
+                <p><em>May 2019 - May 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created a website that manages the episode count for TV shows.</li>
@@ -223,7 +231,7 @@
         <div class="row">
             <div class="col s12 l6">
                 <h4>Korean Translator</h4>
-                <p><em>Feb 2019 -- Mar 2019</em></p>
+                <p><em>Feb 2019 - Mar 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created a program that translates a number to Korean.</li>
@@ -278,7 +286,7 @@
 
             <div class="col s12 l6 offset-l1">
                 <h4>LOONA Website</h4>
-                <p><em>Jan 2019 -- Feb 2019</em></p>
+                <p><em>Jan 2019 - Feb 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created a website that displays information about a music group.</li>
@@ -298,7 +306,7 @@
         <div class="row">
             <div class="col s12 l6">
                 <h4>Bookmark Manager</h4>
-                <p><em>Nov 2018 -- Dec 2018</em></p>
+                <p><em>Nov 2018 - Dec 2018</em></p>
 
                 <ul class="browser-default">
                     <li>Created a website that manages bookmark links.</li>
@@ -344,7 +352,7 @@
 
             <div class="col s12 l6 offset-l1">
                 <h4>TWICE Website</h4>
-                <p><em>Jul 2018 -- Sep 2018</em></p>
+                <p><em>Jul 2018 - Sep 2018</em></p>
                 <p>Created a website dedicated to a korean girl group called TWICE.</p>
 
                 <ul class="browser-default">
@@ -366,7 +374,7 @@
         <div class="row">
             <div class="col s12 l6">
                 <h4>Sneaker Database</h4>
-                <p><em>Jun 2018 -- Aug 2018</em></p>
+                <p><em>Jun 2018 - Aug 2018</em></p>
 
                 <ul class="browser-default">
                     <li>Created a database that displays sneaker releases and their prices.</li>
@@ -395,7 +403,7 @@
 
             <div class="col s12 l6 offset-l1">
                 <h4>Audio Calculation</h4>
-                <p><em>May 2017 -- Jun 2017</em></p>
+                <p><em>May 2017 - Jun 2017</em></p>
 
                 <ul class="browser-default">
                     <li>Developed in C# that calculates audio features for a set of music and speech files.</li>
@@ -463,7 +471,7 @@
             <table>
                 <tr>
                     <th>Languages</th>
-                    <td>(proficient): C++, SQL, (familiar): Java, C#, HTML, CSS, JavaScript, Python </td>
+                    <td>(proficient): C++, SQL, (familiar): Java, C#, HTML, CSS, JavaScript </td>
                 </tr>
 
                 <tr>
@@ -473,8 +481,7 @@
 
                 <tr>
                     <th>Technologies</th>
-                    <td>Visual Studio, VS Code, Eclipse Java Oxygen, MySQL, SQLite, SQLite, PyCharm, Firebase, Android
-                        Studio</td>
+                    <td>Visual Studio, VS Code, Eclipse Java Oxygen, MySQL, Firebase, Android Studio</td>
                 </tr>
             </table>
         </div>
