Added new project

--- a/index.html
+++ b/index.html
@@ -117,6 +117,57 @@
 
         <br>
 
+        <!-- MEMBER PROFILE PROJECT -->
+        <div class="row">
+
+            <div class="col s12 l5">
+                <h4>Member Profile</h4>
+                <p><em>Oct 2019 - Present</em></p>
+
+                <ul class="browser-default">
+                    <li>Created a console app that manages member profiles of kpop groups.</li>
+                    <li>Implemented a hash table to store members to its respective hash value.</li>
+                    <li>Utilized a linked list structure to store members with the same hash value.</li>
+                    <li>Updated a text file that stores member info after each change.</li>
+                </ul>
+
+                <a href="https://github.com/sojuljul/MemberProfile" target="_blank" class="btn indigo darken-4">Github
+                    Link</a>
+            </div>
+
+            <div class="col s12 l6 offset-l1">
+                <div class="slider" id="android">
+                    <ul class="slides">
+                        <li>
+                            <img src="img-projects/mprofile-img/mp group.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp insert.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp update.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp member.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp before list.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp delete list.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="img-projects/mprofile-img/mp after list.JPG" alt="">
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <hr>
+        <br>
+
         <!-- EP RECORDER ANDROID -->
 
         <div class="row">
@@ -148,7 +199,7 @@
 
             <div class="col s12 l5 offset-l1">
                 <h4>Episode Recorder (Android)</h4>
-                <p><em>Jun 2019 - Present</em></p>
+                <p><em>Jun 2019 - Aug 2019</em></p>
 
                 <ul class="browser-default">
                     <li>Created an app to store tv shows and their episode counts.</li>
